# QueryNest

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCKER.md  EXECUTABLE_QUERY_GUIDE.md  LICENSE  README.md  SEMANTIC_WRITE_SCENARIOS.md  app.md  check_db.py  comprehensive_fix.py  config.example.yaml  config.py  config.yaml  create_test_data.py  deploy.py  docker-compose.yml  fix_uvx_startup.py  install.py  mcp_minimal.py  mcp_server.py  mcp_server_complete.py  mcp_server_debug.py  mcp_server_working.py  mcp_test_results.json  pyproject.toml  pyproject_minimal.toml  pytest.ini  querynest.service  ras_sit_database_summary.md  requirements.txt  run_integration_tests.py  setup.py  simulate_uvx.py  start.bat  start.py  start_mcp.py  start_querynest.bat  (+18 more)
.claude/: settings.local.json
database/: __init__.py  connection_manager.py  metadata_cache.py  metadata_manager.py  metadata_manager_file.py  metadata_manager_refactored.py  metadata_scanner.py  metadata_storage.py  query_engine.py
deployment/: Dockerfile  start.sh
docker/mongodb/init/: 01-init-users.js
docker/prometheus/: prometheus.yml
docs/: COMPREHENSIVE_TEST_REPORT.md  FUNCTIONALITY_VERIFICATION_REPORT.md  PARAMETER_OPTIMIZATION_GUIDE.md  PROJECT_CLEANUP_REPORT.md  PROJECT_STRUCTURE.md  semantic_local_file_migration.md
mcp_tools/: __init__.py  base_tool.py  collection_analysis.py  collection_selection.py  database_discovery.py  database_selection.py  feedback_tools.py  instance_discovery.py  instance_selection.py  interfaces.py  query_confirmation.py  query_generation.py  query_tools.py  semantic_completion.py  semantic_confirmation.py  semantic_feedback.py  semantic_management.py  tool_factory.py  unified_semantic_tool.py  workflow_management.py
plugins/example/: main.py  manifest.json
scanner/: __init__.py  database_scanner.py  semantic_analyzer.py  structure_scanner.py
scripts/: insert_test_data.py
semantic_data/: global_config.json  semantic_index.json
semantic_data/instances/test_instance/databases/test_db/collections/test_collection/: fields.json
storage/: __init__.py  advanced_cache_manager.py  config.py  enhanced_local_semantic_storage.py  file_metadata_manager.py  local_semantic_storage.py  memory_storage.py  semantic_file_manager.py  semantic_storage_factory.py  semantic_storage_interface.py  workflow_state_storage.py  workflow_state_storage_factory.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/fixtures/: __init__.py
tests/integration/: base_integration_test.py  test_config.py  test_dual_semantic_storage.py  test_end_to_end.py  test_mcp_tools_integration.py
tests/unit/: test_dual_semantic_unit.py  test_error_handler.py  test_integration.py  test_local_semantic_unit.py  test_mcp_tools_unit.py  test_metadata_refactoring.py  test_service.py  test_tool_factory.py  test_workflow_manager.py
tests/unit/database/: __init__.py
tests/unit/mcp/: __init__.py
tests/unit/scanner/: __init__.py
tests/unit/utils/: __init__.py
utils/: __init__.py  config_validator.py  error_handler.py  logger.py  parameter_processor.py  parameter_validator.py  plugin_manager.py  semantic_error_handler.py  startup_validator.py  state_manager.py  tool_context.py  tool_factory.py  user_confirmation.py  workflow_manager.py  workflow_state.py  workflow_state_serializer.py  workflow_wrapper.py
