[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "querynest"
version = "1.0.0"
description = "QueryNest MCP MongoDB查询服务"
authors = [{name = "QueryNest Team"}]
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "pymongo>=4.0.0",
    "motor>=3.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "structlog>=23.0.0",
    "python-dotenv>=1.0.0",
    "dnspython>=2.0.0",
    "tornado>=5.0",
    "aiofiles>=23.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0"
]

[project.scripts]
querynest-mcp = "mcp_server:cli_main"

[tool.setuptools]
include-package-data = true
py-modules = ["mcp_server", "config", "start"]


[tool.setuptools.packages.find]
where = ["."]
include = ["database*", "scanner*", "mcp_tools*", "utils*", "storage*", "workflow*"]
exclude = ["tests*", "venv*", "env*", "build*", "dist*", "*.egg-info*", "backups*", "logs*", "docs*", "scripts*", "deployment*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]